--- a/flink-demo-app/flink/pom.xml
+++ b/flink-demo-app/flink/pom.xml
@@ -36,7 +36,6 @@
     <version>3.1.0-1.18</version>
 </dependency>
 
-
 		<!-- https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-java -->
 <dependency>
     <groupId>org.apache.flink</groupId>
@@ -44,6 +43,31 @@
     <version>1.18.0</version>
     <scope>provided</scope>
 </dependency>
+
+<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-kinesisanalytics-runtime</artifactId>
+			<version>1.2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+    <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-java</artifactId>
+        <version>1.14.0</version>
+    </dependency>
+   
+   <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        	<version>2.8.1</version>
+        </dependency>
+  
+    <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>s3</artifactId>
+        <version>2.16.86</version>
+    </dependency>
 
     
     <!-- https://mvnrepository.com/artifact/software.amazon.msk/aws-msk-iam-auth -->
