--- a/flink-demo-app/flink/pom.xml
+++ b/flink-demo-app/flink/pom.xml
@@ -57,7 +57,19 @@
         <artifactId>flink-java</artifactId>
         <version>1.15.2</version>
     </dependency>
-   
+
+   <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>ssm</artifactId>
+	  <version>2.25.70</version>
+    </dependency>
+
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>profiles</artifactId>
+	  <version>2.26.10</version>
+    </dependency>
+
    <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
